--- a/index.html
+++ b/index.html
@@ -7,158 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/dist/tippy.css">
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f9f9f9;
-            color: #333;
-            position: relative;
-        }
-        header {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            margin-bottom: 20px;
-            border-bottom: 2px solid #D71921;
-            padding-bottom: 10px;
-        }
-        .logo {
-            width: 80px;
-            margin-bottom: 10px;
-        }
-        h1 {
-            font-size: 24px;
-            color: #D71921;
-            margin: 0;
-        }
-        .main-progress {
-            margin-top: 10px;
-            height: 20px;
-            background-color: #e0e0e0;
-            border-radius: 10px;
-            overflow: hidden;
-            width: 100%;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        .main-progress-bar {
-            height: 100%;
-            background-color: #D71921;
-            transition: width 0.3s ease;
-        }
-        .watermark {
-            position: fixed;
-            bottom: 10px;
-            right: 10px;
-            font-size: 12px;
-            color: rgba(0, 0, 0, 0.1);
-            transform: rotate(-45deg);
-            pointer-events: none;
-        }
-        .table-container {
-            overflow-x: auto;
-        }
-        table {
-            width: 100%;
-            max-width: 1000px;
-            margin: 20px auto;
-            border-collapse: collapse;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            background-color: #ffffff;
-            border-radius: 8px;
-        }
-        th, td {
-            padding: 12px 15px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-        th {
-            background-color: #D71921;
-            color: white;
-            font-weight: bold;
-        }
-        tr:hover {
-            background-color: #f5f5f5;
-        }
-        .expandable-row {
-            display: none;
-            background-color: #fdfdfd;
-            transition: all 0.3s ease;
-        }
-        .expandable-content {
-            padding: 10px;
-            border-left: 4px solid #D71921;
-        }
-        .clickable {
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-        .clickable:hover {
-            background-color: #f0f0f0;
-        }
-        .clickable.selected {
-            background-color: #f8f8f8;
-            border-left: 4px solid #D71921;
-        }
-        .details-table {
-            width: 100%;
-            margin-top: 10px;
-            border-collapse: collapse;
-            background-color: #fff;
-        }
-        .details-table th, .details-table td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        .details-table th {
-            background-color: #e7e7e7;
-            color: #333;
-            font-weight: bold;
-        }
-        .checklist {
-            list-style: none;
-            padding: 0;
-        }
-        .checklist li {
-            margin-bottom: 8px;
-            display: flex;
-            align-items: center;
-        }
-        .checklist input {
-            margin-right: 10px;
-            transform: scale(1.2);
-        }
-        .progress {
-            height: 10px;
-            background-color: #e0e0e0;
-            border-radius: 10px;
-            overflow: hidden;
-            margin-top: 5px;
-            max-width: 200px;
-        }
-        .progress-bar {
-            height: 100%;
-            background-color: #D71921;
-            transition: width 0.3s ease;
-        }
-        .toggle-content {
-            cursor: pointer;
-            color: #007bff;
-            text-decoration: underline;
-        }
-        .budget-input {
-            width: 100px;
-            padding: 5px;
-            margin: 10px 0;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            text-align: right;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -409,6 +258,14 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2/dist/umd/popper.min.js"></script>
 <script src="https://unpkg.com/tippy.js@6"></script>
 <script>
+    // Function to format numbers as currency
+    function formatCurrency(value) {
+        return new Intl.NumberFormat('pt-BR', {
+            style: 'currency',
+            currency: 'BRL'
+        }).format(value);
+    }
+
     // Function to update budgets based on total budget input
     function updateBudgets() {
         const totalBudget = parseFloat(document.getElementById('total-budget').value) || 0;
@@ -417,10 +274,10 @@
         const budget3 = (totalBudget * 0.2542).toFixed(2); // 25.42% of total
         const budget4 = (totalBudget * 0.4069).toFixed(2); // 40.69% of total
 
-        document.getElementById('budget1').textContent = `R$ ${budget1}`;
-        document.getElementById('budget2').textContent = `R$ ${budget2}`;
-        document.getElementById('budget3').textContent = `R$ ${budget3}`;
-        document.getElementById('budget4').textContent = `R$ ${budget4}`;
+        document.getElementById('budget1').textContent = formatCurrency(budget1);
+        document.getElementById('budget2').textContent = formatCurrency(budget2);
+        document.getElementById('budget3').textContent = formatCurrency(budget3);
+        document.getElementById('budget4').textContent = formatCurrency(budget4);
     }
 
     function toggleDetails(id) {
