--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         }
         header {
             display: flex;
-            flex-direction: column;
             align-items: center;
             text-align: center;
             margin-bottom: 20px;
@@ -27,7 +26,7 @@
         }
         .logo {
             width: 80px;
-            margin-bottom: 10px;
+            margin-right: 20px;
         }
         h1 {
             font-size: 24px;
@@ -225,7 +224,6 @@
                                         <li><input type="checkbox" onchange="updateProgress('progress1', 'checklist1', 'mini-progress1')"> Implementação de mídia programática para alcance otimizado em plataformas digitais.</li>
                                         <li><input type="checkbox" onchange="updateProgress('progress1', 'checklist1', 'mini-progress1')"> Materiais OOH em locais estratégicos, focando em proximidade de concessionárias.</li>
                                     </ul>
-                                    <!-- Removed mini progress bar here -->
                                 </td>
                             </tr>
                             <tr>
