--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             right: 10px;
             font-size: 12px;
             color: rgba(0, 0, 0, 0.1);
+            transform: rotate(-45deg);
             pointer-events: none;
         }
         .table-container {
@@ -389,7 +390,7 @@
 
 <!-- Watermark -->
 <div class="watermark">
-    © Guilherme Marangon - 02/10/2024
+    © Guilherme Marangon - Apresentação em 02/10/2024
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2/dist/umd/popper.min.js"></script>
