Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -94,9 +94,11 @@
       <div id="fase1" class="details">
         <ul>
           <li><strong>07/10/2024:</strong> Solicitação de cotações para agências de eventos (R$ 50K)</li>
+          <li><strong>14/10/2024:</strong> Recebimento das cotações e avaliação (R$ 0)</li>
           <li><strong>01/11/2024:</strong> Início das campanhas de TV, Digital, OOH (R$ 26M)</li>
           <li><strong>02/12/2024:</strong> Início da montagem do evento de lançamento (R$ 500K)</li>
           <li><strong>08/12/2024:</strong> Evento de lançamento para a imprensa (R$ 1,5M)</li>
+          <li><strong>09/12/2024:</strong> Evento de lançamento para concessionárias (R$ 1,5M)</li>
         </ul>
       </div>
     </div>
@@ -107,8 +109,9 @@
       <div id="fase2" class="details">
         <ul>
           <li><strong>01/11/2024:</strong> Início das campanhas comparativas de TV e digital (R$ 5M)</li>
-          <li><strong>03/11/2024:</strong> Publicação de blogs comparativos (R$ 4M)</li>
-          <li><strong>10/11/2024:</strong> Promoções e incentivos nas concessionárias (R$ 6M)</li>
+          <li><strong>03/11/2024:</strong> Publicação de blogs comparativos e mídia digital (R$ 4M)</li>
+          <li><strong>10/11/2024:</strong> Promoções e incentivos nas concessionárias (R$ 4M)</li>
+          <li><strong>01/12/2024:</strong> Retargeting digital para híbridos (R$ 2M)</li>
         </ul>
       </div>
     </div>
